# doc-en

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .travis.yml  CODEOWNERS  CONTRIBUTING.md  Gamel alomaisi  LICENSE  Makefile  Makefile.in  PHP_INI_to_INI.sh  README  README.md  README.translations  README.win32  README.xsl  TODO  Translators  apcu_constant_ids.sh  bightml.xsl.in  bookinfo.sgml  bookinfo.xml  build.chms.bat  chapters.ent  checkdoc.in  chmonly.xml.in  chunk-filename.xsl  class.dir.html  common.dsl  common.dsl.in  compose.yaml  configuration.html  configure.in  configure.php  contacts.txt  contributors.ent  contributors.xml  control-structures.alternative-syntax.html  control-structures.break.html  (+528 more)
.devcontainer/: build.sh  configure-apache.sh  devcontainer.json  post-create.sh  serve.sh  server-prepend.php
.docker/: Dockerfile  entrypoint.sh
.github/: dependabot.yml
RFC/: 2003_meeting_agenda.html  2003_meeting_findings.txt  Buildsystem-proposal.rtf  LICENSE  book.xml  coding_standards  constants.xml  ignoreme  install_PECL.txt  installpart  license  manual.xml.in  manual_splitting  moved_extensions  pdf_problems  protocol_20020310  reference_grouping  removed_extensions  setup.xml  test.xml  xml_validation
appendices/: about.xml  aliases.xml  commandline.xml  comparisons.xml  configure.xml  debugger.sgml  debugger.xml  escaping.xml  examples.xml  extensions.xml  filters.xml  history.xml  http-stuff.sgml  http-stuff.xml  incompat.xml  ini.core.xml  ini.list.xml  ini.sections.xml  ini.xml  license.xml  migration.sgml  migration.xml  migration4.xml  migration5.xml  migration51.xml  migration52.xml  migration53.xml  migration54.xml  migration55.xml  migration56.xml  migration70.xml  migration71.xml  migration72.xml  migration73.xml  migration74.xml  migration80.xml  migration81.xml  migration82.xml  migration83.xml  migration84.xml  (+62 more)
chapters/: DO_NOT_TRANSLATE  README  config.sgml  config.xml  copyright.sgml  copyright.xml  features.sgml  install.apache.xml  install.apache2.xml  install.caudium.xml  install.commandline.xml  install.configure.databases.xml  install.configure.graphics.xml  install.configure.misc.xml  install.configure.php.xml  install.configure.servers.xml  install.configure.xml  install.configure.xml.xml  install.fhttpd.xml  install.general.xml  install.hpux.xml  install.iis.xml  install.iplanet.xml  install.linux.xml  install.macosx.xml  install.omnihttpd.xml  install.openbsd.xml  install.oreilly.xml  install.otherhttpd.xml  install.problems.xml  install.sambar.xml  install.sgml  install.solaris.xml  install.unix.xml  install.windows.xml  install.xitami.xml  install.xml  intro.sgml  intro.xml  lang-syntax.sgml  (+10 more)
chm/: chm_settings.php  common.php  make_chm.README  make_chm.bat  make_chm.php  make_chm_fancy.php
chmonly/: aboutchm.xml  credits.xml  integration.xml  search.xml  skins.xml  specialities.xml  usingchm.xml
da/: preface.xml  translation.xml
dbxml/: dbcentx.mod  dbgenent.ent  dbhierx.mod  dbnotnx.mod  docbookx.dtd
docweb/: main.ent
dsssl/: common.dsl.in  howto-php.dsl.in  howto.dsl.in  html-common.dsl  kdevelop_toc.dsl  phpweb.dsl.in  print.dsl.in  version.dsl
dtds/: phpbook.dtd  translation.dtd
entities/: acronyms.xml  entities-remove.ent  entities.ent  faqurls.ent  global.ent  version.ent.in
faq/: build.xml  com.xml  common.xml  databases.xml  faqurls.ent  general.xml  html.xml  installation.xml  languages.xml  mailinglist.xml  migration.xml  migration4.xml  migration5.xml  misc.xml  obtaining.xml  passwords.xml  using.xml
features/: commandline.xml  connection-handling.sgml  connection-handling.xml  cookies.sgml  cookies.xml  dtrace.xml  error-handling.sgml  error-handling.xml  file-upload.sgml  file-upload.xml  gc.xml  http-auth.sgml  http-auth.xml  images.sgml  images.xml  persistent-connections.sgml  persistent-connections.xml  preload.xml  remote-files.sgml  remote-files.xml  safe-mode.xml  sessions.xml  xforms.xml
functions/: adabas.sgml  adabas.xml  apache.sgml  apache.xml  array.sgml  array.xml  aspell.sgml  aspell.xml  bc.sgml  bc.xml  bzip2.xml  calendar.sgml  calendar.xml  ccvs.xml  classobj.xml  com.xml  cpdf.sgml  cpdf.xml  crack.xml  ctype.xml  curl.xml  cybercash.xml  cybermut.xml  cyrus.xml  datetime.sgml  datetime.xml  dba.sgml  dba.xml  dbase.sgml  dbase.xml  dbm.sgml  dbm.xml  dbplus.xml  dbx.xml  dio.xml  dir.sgml  dir.xml  dl.sgml  dl.xml  domxml.xml  (+135 more)
howto/: Makefile  README  cvs.xml  docbook.xml  editors.xml  framework.xml  generating.xml  howto-template.sgml  howto.ent  howto.xml  phpdoc-howto.dsl  phpdoc-howto.ent  phpdoc-howto.xml  preface.xml  scripts.xml  tools.xml  vcs.xml  working.xml
htmlhelp/: README.txt  TODO.txt  filter_files.php  local_vars.php  make-xchm  make_chm.bat  make_chm.php  mirrors_ini.php  split_notes.php  user_notes.php
install/: README  composer.xml  ini.xml  intro.xml  pecl.xml  pie.xml  problems.xml  snippet.apache2.compat.xml
internals/: extendphp3.xml  intro.xml
internals2/: counter.xml  intro.xml  opcodes.xml
language/: attributes.xml  basic-syntax.sgml  basic-syntax.xml  constants.sgml  constants.xml  context.xml  control-structures.sgml  control-structures.xml  enumerations.xml  error-handling.xml  errors.xml  exceptions.xml  expressions.sgml  expressions.xml  fibers.xml  functions.sgml  functions.xml  generators.xml  namespaces.xml  oop.sgml  oop.xml  oop5.xml  operators.sgml  operators.xml  references.xml  types.sgml  types.xml  variables.sgml  variables.xml  wrappers.xml
pear/: about.xml  benchmark_timer.xml  pear.xml  standards.xml
php/: copyright.php  install.hpux.php  install.linux.php  install.macosx.php  install.openbsd.php  install.solaris.php  install.unix.php  install.windows.php  installation.php  intro-whatcando.php  introduction.php  preface.php  tutorial.firstpage.php  tutorial.forms.php  tutorial.oldcode.php  tutorial.php  tutorial.useful.php  tutorial.whatsnext.php
reference/: entities.ent  rsusi.txt
scripts/: README  add_rev.php  aspell.php  bughunter.php  build-chms-config.php  build-chms-history.php  checkdoc.php  (+71 more)
(+21725 files in other folders)
